ext/nmea.cpp
#line 1 "nmea.rl"
#include "nmea.hpp"
namespace NMEA {

#line 95 "nmea.rl"




#line 11 "../ext/nmea.cpp"
static const int NMEA_start = 1;

static const int NMEA_error = 0;

#line 99 "nmea.rl"

bool scan(char *p, Handler& handler) throw (Error) {
	char *pe;
	int cs;
	
	int current_digit = 0, current_frac = 0;
	double current_float = 0;
	int current_degrees = 0;
	int bcd = 0;
	Time utc;
	Angle latitude, longitude;
	
	char checksum[3];
	checksum[2] = 0;
	int sentence_len = strlen(p);
	char current_string[sentence_len+1];
	char *current_s = current_string;
	char *sentence_begin = NULL, *sentence_end = NULL;
	
	//RMC
	bool rmc_valid = 0;
	Double knot_speed, course, magnetic_variation;
	//GSV
	satellite_list satellites;
	Int snr_db;
	int total_gsv_number = 0, current_gsv_number = 0, total_satellites = 0, satellite_number = 0, elevation = 0, azimuth = 0;
	//GSA
	bool gsa_automatic;
	GSA_MODE gsa_mode;
	int gsa_prn_index = 0;
	Double gsa_pdop, gsa_hdop, gsa_vdop;
	satellite_numbers gsa_prns;
	//GGA
	GGA_FIX gps_quality;
	Int dgps_station_id, active_satellite_count;
	Double altitude, geoidal_height, dgps_data_age;
	char altitude_units, geoidal_height_units;
	//PSRFTXT
	std::string psrf_key, psrf_value;
	//VTG
	Double true_course, magnetic_course, vtg_knot_speed, vtg_kmph_speed;
	VTG_MODE vtg_mode = VTG_DEFAULT;
	//BOD
	std::string wpt_to, wpt_from;
	
#line 62 "../ext/nmea.cpp"
	{
	cs = NMEA_start;
	}
#line 144 "nmea.rl"
	
	pe = p + sentence_len;
	
#line 70 "../ext/nmea.cpp"
	{
	if ( p == pe )
		goto _out;
	switch ( cs )
	{
case 1:
	if ( (*p) == 36 )
		goto tr0;
	goto st0;
st0:
	goto _out0;
tr0:
#line 65 "nmea.rl"
	{
		sentence_begin = p+1;
	}
	goto st2;
st2:
	if ( ++p == pe )
		goto _out2;
case 2:
#line 92 "../ext/nmea.cpp"
	switch( (*p) ) {
		case 71: goto st3;
		case 80: goto st264;
	}
	goto st0;
st3:
	if ( ++p == pe )
		goto _out3;
case 3:
	if ( (*p) == 80 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _out4;
case 4:
	switch( (*p) ) {
		case 66: goto st5;
		case 71: goto st26;
		case 82: goto st177;
		case 86: goto st232;
	}
	goto st0;
st5:
	if ( ++p == pe )
		goto _out5;
case 5:
	if ( (*p) == 79 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _out6;
case 6:
	if ( (*p) == 68 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _out7;
case 7:
	if ( (*p) == 44 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _out8;
case 8:
	if ( (*p) == 44 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto st0;
tr35:
#line 3 "nmea.rl"
	{true_course = current_float; current_float = 0;}
	goto st9;
st9:
	if ( ++p == pe )
		goto _out9;
case 9:
#line 154 "../ext/nmea.cpp"
	if ( (*p) == 84 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _out10;
case 10:
	if ( (*p) == 44 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _out11;
case 11:
	if ( (*p) == 44 )
		goto st12;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr32:
#line 4 "nmea.rl"
	{magnetic_course = current_float; current_float = 0;}
	goto st12;
st12:
	if ( ++p == pe )
		goto _out12;
case 12:
#line 182 "../ext/nmea.cpp"
	if ( (*p) == 77 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _out13;
case 13:
	if ( (*p) == 44 )
		goto st14;
	goto st0;
tr20:
#line 29 "nmea.rl"
	{
		*current_s = (*p);
		current_s++;
		*current_s = 0;
	}
	goto st14;
st14:
	if ( ++p == pe )
		goto _out14;
case 14:
#line 205 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st15;
	goto tr20;
st15:
	if ( ++p == pe )
		goto _out15;
case 15:
	if ( (*p) == 42 )
		goto tr23;
	goto tr22;
tr24:
#line 29 "nmea.rl"
	{
		*current_s = (*p);
		current_s++;
		*current_s = 0;
	}
	goto st16;
tr22:
#line 4 "nmea.rl"
	{
		if(*current_string) wpt_to = current_string;
		current_s = current_string;
		*current_s = 0;
	}
#line 29 "nmea.rl"
	{
		*current_s = (*p);
		current_s++;
		*current_s = 0;
	}
	goto st16;
st16:
	if ( ++p == pe )
		goto _out16;
case 16:
#line 242 "../ext/nmea.cpp"
	if ( (*p) == 42 )
		goto tr25;
	goto tr24;
tr23:
#line 4 "nmea.rl"
	{
		if(*current_string) wpt_to = current_string;
		current_s = current_string;
		*current_s = 0;
	}
#line 10 "nmea.rl"
	{
		if(*current_string) wpt_from = current_string;
		current_s = current_string;
		*current_s = 0;
	}
#line 82 "nmea.rl"
	{sentence_end = p; }
	goto st17;
tr25:
#line 10 "nmea.rl"
	{
		if(*current_string) wpt_from = current_string;
		current_s = current_string;
		*current_s = 0;
	}
#line 82 "nmea.rl"
	{sentence_end = p; }
	goto st17;
st17:
	if ( ++p == pe )
		goto _out17;
case 17:
#line 276 "../ext/nmea.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr26;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr26;
	} else
		goto tr26;
	goto st0;
tr26:
#line 82 "nmea.rl"
	{checksum[0] = (*p);}
	goto st18;
st18:
	if ( ++p == pe )
		goto _out18;
case 18:
#line 294 "../ext/nmea.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr27;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr27;
	} else
		goto tr27;
	goto st0;
tr27:
#line 68 "nmea.rl"
	{
		checksum[1] = (*p);
		unsigned char sum = 0, *ptr;
		for(ptr = (unsigned char *)sentence_begin; ptr != (unsigned char*)sentence_end; ptr++) {
			sum ^= *ptr;
		}
		unsigned int sum_provided;
		sscanf(checksum, "%x", &sum_provided);
		if(sum_provided != sum) {
			char buf[BUFSIZ];
			snprintf(buf, BUFSIZ, "Checksum didn't match: provided is %d, calculated is %d", sum_provided, sum);
			throw DataError(buf);
		}
	}
	goto st19;
st19:
	if ( ++p == pe )
		goto _out19;
case 19:
#line 325 "../ext/nmea.cpp"
	switch( (*p) ) {
		case 10: goto tr28;
		case 13: goto tr29;
	}
	goto st0;
tr28:
#line 16 "nmea.rl"
	{
		handler.bod(true_course, magnetic_course, wpt_to, wpt_from);
	}
	goto st275;
tr77:
#line 8 "nmea.rl"
	{
		handler.gga(utc, latitude, longitude, gps_quality, active_satellite_count, gsa_hdop, altitude, geoidal_height, dgps_data_age, dgps_station_id);
	}
	goto st275;
tr134:
#line 4 "nmea.rl"
	{
		handler.gll(utc, latitude, longitude);
	}
	goto st275;
tr193:
#line 6 "nmea.rl"
	{
		handler.gsa(gsa_automatic, gsa_mode, gsa_prns, gsa_pdop, gsa_hdop, gsa_vdop);
		gsa_prn_index = 0;
	}
	goto st275;
tr221:
#line 29 "nmea.rl"
	{
		GSV_FLAG flag = GSV_CONTINUE;
		if(current_gsv_number == 1) {
			flag = GSV_START;
		} else if(current_gsv_number == total_gsv_number) {
			flag = GSV_END;
		}
		handler.gsv(flag, satellites);
		satellites.empty();
	}
	goto st275;
tr316:
#line 8 "nmea.rl"
	{
		handler.vtg(true_course, magnetic_course, vtg_knot_speed, vtg_kmph_speed, vtg_mode);
	}
	goto st275;
tr342:
#line 3 "nmea.rl"
	{
		psrf_key = current_string;
		current_s = current_string; 
		*current_s = 0;
	}
#line 14 "nmea.rl"
	{
		handler.psrftxt(psrf_key, psrf_value);
	}
	goto st275;
tr348:
#line 9 "nmea.rl"
	{
		psrf_value = current_string;
		current_s = current_string; 
		*current_s = 0;
	}
#line 14 "nmea.rl"
	{
		handler.psrftxt(psrf_key, psrf_value);
	}
	goto st275;
st275:
	if ( ++p == pe )
		goto _out275;
case 275:
#line 403 "../ext/nmea.cpp"
	goto st0;
tr29:
#line 16 "nmea.rl"
	{
		handler.bod(true_course, magnetic_course, wpt_to, wpt_from);
	}
	goto st276;
tr78:
#line 8 "nmea.rl"
	{
		handler.gga(utc, latitude, longitude, gps_quality, active_satellite_count, gsa_hdop, altitude, geoidal_height, dgps_data_age, dgps_station_id);
	}
	goto st276;
tr135:
#line 4 "nmea.rl"
	{
		handler.gll(utc, latitude, longitude);
	}
	goto st276;
tr194:
#line 6 "nmea.rl"
	{
		handler.gsa(gsa_automatic, gsa_mode, gsa_prns, gsa_pdop, gsa_hdop, gsa_vdop);
		gsa_prn_index = 0;
	}
	goto st276;
tr222:
#line 29 "nmea.rl"
	{
		GSV_FLAG flag = GSV_CONTINUE;
		if(current_gsv_number == 1) {
			flag = GSV_START;
		} else if(current_gsv_number == total_gsv_number) {
			flag = GSV_END;
		}
		handler.gsv(flag, satellites);
		satellites.empty();
	}
	goto st276;
tr317:
#line 8 "nmea.rl"
	{
		handler.vtg(true_course, magnetic_course, vtg_knot_speed, vtg_kmph_speed, vtg_mode);
	}
	goto st276;
tr343:
#line 3 "nmea.rl"
	{
		psrf_key = current_string;
		current_s = current_string; 
		*current_s = 0;
	}
#line 14 "nmea.rl"
	{
		handler.psrftxt(psrf_key, psrf_value);
	}
	goto st276;
tr349:
#line 9 "nmea.rl"
	{
		psrf_value = current_string;
		current_s = current_string; 
		*current_s = 0;
	}
#line 14 "nmea.rl"
	{
		handler.psrftxt(psrf_key, psrf_value);
	}
	goto st276;
st276:
	if ( ++p == pe )
		goto _out276;
case 276:
#line 477 "../ext/nmea.cpp"
	if ( (*p) == 10 )
		goto st275;
	goto st0;
tr17:
#line 11 "nmea.rl"
	{
		current_float = 0;
		current_digit = current_digit*10 + ((*p) - '0');
	}
	goto st20;
st20:
	if ( ++p == pe )
		goto _out20;
case 20:
#line 492 "../ext/nmea.cpp"
	if ( (*p) == 46 )
		goto tr30;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr30:
#line 15 "nmea.rl"
	{
		current_frac = 10;
		current_float = current_digit;
		current_digit = 0;
	}
	goto st21;
st21:
	if ( ++p == pe )
		goto _out21;
case 21:
#line 510 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr31;
	goto st0;
tr31:
#line 20 "nmea.rl"
	{
		current_float += ((*p) - '0')*1.0 / current_frac;
		current_frac *= 10;
	}
	goto st22;
st22:
	if ( ++p == pe )
		goto _out22;
case 22:
#line 525 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto tr32;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr31;
	goto st0;
tr13:
#line 11 "nmea.rl"
	{
		current_float = 0;
		current_digit = current_digit*10 + ((*p) - '0');
	}
	goto st23;
st23:
	if ( ++p == pe )
		goto _out23;
case 23:
#line 542 "../ext/nmea.cpp"
	if ( (*p) == 46 )
		goto tr33;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto st0;
tr33:
#line 15 "nmea.rl"
	{
		current_frac = 10;
		current_float = current_digit;
		current_digit = 0;
	}
	goto st24;
st24:
	if ( ++p == pe )
		goto _out24;
case 24:
#line 560 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr34;
	goto st0;
tr34:
#line 20 "nmea.rl"
	{
		current_float += ((*p) - '0')*1.0 / current_frac;
		current_frac *= 10;
	}
	goto st25;
st25:
	if ( ++p == pe )
		goto _out25;
case 25:
#line 575 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto tr35;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr34;
	goto st0;
st26:
	if ( ++p == pe )
		goto _out26;
case 26:
	switch( (*p) ) {
		case 71: goto st27;
		case 76: goto st91;
		case 83: goto st124;
	}
	goto st0;
st27:
	if ( ++p == pe )
		goto _out27;
case 27:
	if ( (*p) == 65 )
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _out28;
case 28:
	if ( (*p) == 44 )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _out29;
case 29:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr41;
	goto st0;
tr41:
#line 24 "nmea.rl"
	{bcd = 10*((*p) - '0');}
	goto st30;
st30:
	if ( ++p == pe )
		goto _out30;
case 30:
#line 620 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr42;
	goto st0;
tr42:
#line 24 "nmea.rl"
	{bcd += (*p) - '0';}
#line 37 "nmea.rl"
	{ utc.hour = bcd; }
	goto st31;
st31:
	if ( ++p == pe )
		goto _out31;
case 31:
#line 634 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr43;
	goto st0;
tr43:
#line 24 "nmea.rl"
	{bcd = 10*((*p) - '0');}
	goto st32;
st32:
	if ( ++p == pe )
		goto _out32;
case 32:
#line 646 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr44;
	goto st0;
tr44:
#line 24 "nmea.rl"
	{bcd += (*p) - '0';}
#line 37 "nmea.rl"
	{ utc.minute = bcd;}
	goto st33;
st33:
	if ( ++p == pe )
		goto _out33;
case 33:
#line 660 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr45;
	goto st0;
tr45:
#line 24 "nmea.rl"
	{bcd = 10*((*p) - '0');}
	goto st34;
st34:
	if ( ++p == pe )
		goto _out34;
case 34:
#line 672 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr46;
	goto st0;
tr46:
#line 24 "nmea.rl"
	{bcd += (*p) - '0';}
#line 37 "nmea.rl"
	{ utc.second = bcd;}
	goto st35;
st35:
	if ( ++p == pe )
		goto _out35;
case 35:
#line 686 "../ext/nmea.cpp"
	switch( (*p) ) {
		case 44: goto st36;
		case 46: goto st89;
	}
	goto st0;
tr113:
#line 37 "nmea.rl"
	{ utc.usec = current_digit; current_digit = 0;}
	goto st36;
st36:
	if ( ++p == pe )
		goto _out36;
case 36:
#line 700 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st37;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr50;
	goto st0;
tr110:
#line 46 "nmea.rl"
	{
		latitude.nil = false;
		latitude.value.degrees = current_degrees;
		latitude.value.minutes = current_float;
		current_float = 0;
		current_degrees = 0;
	}
	goto st37;
tr111:
#line 45 "nmea.rl"
	{current_degrees *= -1;}
#line 46 "nmea.rl"
	{
		latitude.nil = false;
		latitude.value.degrees = current_degrees;
		latitude.value.minutes = current_float;
		current_float = 0;
		current_degrees = 0;
	}
	goto st37;
st37:
	if ( ++p == pe )
		goto _out37;
case 37:
#line 732 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st38;
	goto st0;
st38:
	if ( ++p == pe )
		goto _out38;
case 38:
	if ( (*p) == 44 )
		goto st39;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr53;
	goto st0;
tr103:
#line 56 "nmea.rl"
	{
		longitude.nil = false;
		longitude.value.degrees = current_degrees;
		longitude.value.minutes = current_float;
		current_degrees = 0;
		current_float = 0;
	}
	goto st39;
tr104:
#line 55 "nmea.rl"
	{current_degrees *= -1;}
#line 56 "nmea.rl"
	{
		longitude.nil = false;
		longitude.value.degrees = current_degrees;
		longitude.value.minutes = current_float;
		current_degrees = 0;
		current_float = 0;
	}
	goto st39;
st39:
	if ( ++p == pe )
		goto _out39;
case 39:
#line 771 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st40;
	goto st0;
st40:
	if ( ++p == pe )
		goto _out40;
case 40:
	if ( 48 <= (*p) && (*p) <= 56 )
		goto tr55;
	goto st0;
tr55:
#line 3 "nmea.rl"
	{gps_quality = (GGA_FIX)((*p)-'0');}
	goto st41;
st41:
	if ( ++p == pe )
		goto _out41;
case 41:
#line 790 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st42;
	goto st0;
st42:
	if ( ++p == pe )
		goto _out42;
case 42:
	if ( (*p) == 44 )
		goto st43;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr58;
	goto st0;
tr96:
#line 4 "nmea.rl"
	{active_satellite_count = bcd; }
	goto st43;
st43:
	if ( ++p == pe )
		goto _out43;
case 43:
#line 811 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st44;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr60;
	goto st0;
tr94:
#line 11 "nmea.rl"
	{ gsa_hdop = current_float; current_float = 0;}
	goto st44;
st44:
	if ( ++p == pe )
		goto _out44;
case 44:
#line 825 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st45;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr62;
	goto st0;
st45:
	if ( ++p == pe )
		goto _out45;
case 45:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st46;
	} else if ( (*p) >= 65 )
		goto st46;
	goto st0;
st46:
	if ( ++p == pe )
		goto _out46;
case 46:
	if ( (*p) == 44 )
		goto st47;
	goto st0;
tr91:
#line 5 "nmea.rl"
	{altitude = current_float; current_float = 0;}
	goto st47;
st47:
	if ( ++p == pe )
		goto _out47;
case 47:
#line 856 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st48;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr66;
	goto st0;
st48:
	if ( ++p == pe )
		goto _out48;
case 48:
	if ( (*p) == 44 )
		goto st49;
	goto st0;
tr86:
#line 6 "nmea.rl"
	{geoidal_height = current_float; current_float = 0;}
	goto st49;
st49:
	if ( ++p == pe )
		goto _out49;
case 49:
#line 877 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st50;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr69;
	goto st0;
tr81:
#line 7 "nmea.rl"
	{dgps_data_age = current_float; current_float = 0;}
	goto st50;
st50:
	if ( ++p == pe )
		goto _out50;
case 50:
#line 891 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr70;
	goto st0;
tr70:
#line 24 "nmea.rl"
	{bcd = 10*((*p) - '0');}
	goto st51;
st51:
	if ( ++p == pe )
		goto _out51;
case 51:
#line 903 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr71;
	goto st0;
tr71:
#line 24 "nmea.rl"
	{bcd += (*p) - '0';}
	goto st52;
st52:
	if ( ++p == pe )
		goto _out52;
case 52:
#line 915 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr72;
	goto st0;
tr72:
#line 25 "nmea.rl"
	{bcd = bcd*10 + ((*p) - '0');}
	goto st53;
st53:
	if ( ++p == pe )
		goto _out53;
case 53:
#line 927 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr73;
	goto st0;
tr73:
#line 26 "nmea.rl"
	{bcd = bcd*10 + ((*p) - '0');}
#line 7 "nmea.rl"
	{dgps_station_id = bcd;}
	goto st54;
st54:
	if ( ++p == pe )
		goto _out54;
case 54:
#line 941 "../ext/nmea.cpp"
	if ( (*p) == 42 )
		goto tr74;
	goto st0;
tr74:
#line 82 "nmea.rl"
	{sentence_end = p; }
	goto st55;
st55:
	if ( ++p == pe )
		goto _out55;
case 55:
#line 953 "../ext/nmea.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr75;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr75;
	} else
		goto tr75;
	goto st0;
tr75:
#line 82 "nmea.rl"
	{checksum[0] = (*p);}
	goto st56;
st56:
	if ( ++p == pe )
		goto _out56;
case 56:
#line 971 "../ext/nmea.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr76;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr76;
	} else
		goto tr76;
	goto st0;
tr76:
#line 68 "nmea.rl"
	{
		checksum[1] = (*p);
		unsigned char sum = 0, *ptr;
		for(ptr = (unsigned char *)sentence_begin; ptr != (unsigned char*)sentence_end; ptr++) {
			sum ^= *ptr;
		}
		unsigned int sum_provided;
		sscanf(checksum, "%x", &sum_provided);
		if(sum_provided != sum) {
			char buf[BUFSIZ];
			snprintf(buf, BUFSIZ, "Checksum didn't match: provided is %d, calculated is %d", sum_provided, sum);
			throw DataError(buf);
		}
	}
	goto st57;
st57:
	if ( ++p == pe )
		goto _out57;
case 57:
#line 1002 "../ext/nmea.cpp"
	switch( (*p) ) {
		case 10: goto tr77;
		case 13: goto tr78;
	}
	goto st0;
tr69:
#line 11 "nmea.rl"
	{
		current_float = 0;
		current_digit = current_digit*10 + ((*p) - '0');
	}
	goto st58;
st58:
	if ( ++p == pe )
		goto _out58;
case 58:
#line 1019 "../ext/nmea.cpp"
	if ( (*p) == 46 )
		goto tr79;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr69;
	goto st0;
tr79:
#line 15 "nmea.rl"
	{
		current_frac = 10;
		current_float = current_digit;
		current_digit = 0;
	}
	goto st59;
st59:
	if ( ++p == pe )
		goto _out59;
case 59:
#line 1037 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr80;
	goto st0;
tr80:
#line 20 "nmea.rl"
	{
		current_float += ((*p) - '0')*1.0 / current_frac;
		current_frac *= 10;
	}
	goto st60;
st60:
	if ( ++p == pe )
		goto _out60;
case 60:
#line 1052 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto tr81;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr80;
	goto st0;
tr66:
#line 11 "nmea.rl"
	{
		current_float = 0;
		current_digit = current_digit*10 + ((*p) - '0');
	}
	goto st61;
st61:
	if ( ++p == pe )
		goto _out61;
case 61:
#line 1069 "../ext/nmea.cpp"
	if ( (*p) == 46 )
		goto tr82;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr66;
	goto st0;
tr82:
#line 15 "nmea.rl"
	{
		current_frac = 10;
		current_float = current_digit;
		current_digit = 0;
	}
	goto st62;
st62:
	if ( ++p == pe )
		goto _out62;
case 62:
#line 1087 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr83;
	goto st0;
tr83:
#line 20 "nmea.rl"
	{
		current_float += ((*p) - '0')*1.0 / current_frac;
		current_frac *= 10;
	}
	goto st63;
st63:
	if ( ++p == pe )
		goto _out63;
case 63:
#line 1102 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st64;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr83;
	goto st0;
st64:
	if ( ++p == pe )
		goto _out64;
case 64:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr85;
	} else if ( (*p) >= 65 )
		goto tr85;
	goto st0;
tr85:
#line 6 "nmea.rl"
	{geoidal_height_units = (*p);}
	goto st65;
st65:
	if ( ++p == pe )
		goto _out65;
case 65:
#line 1126 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto tr86;
	goto st0;
tr62:
#line 11 "nmea.rl"
	{
		current_float = 0;
		current_digit = current_digit*10 + ((*p) - '0');
	}
	goto st66;
st66:
	if ( ++p == pe )
		goto _out66;
case 66:
#line 1141 "../ext/nmea.cpp"
	if ( (*p) == 46 )
		goto tr87;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr62;
	goto st0;
tr87:
#line 15 "nmea.rl"
	{
		current_frac = 10;
		current_float = current_digit;
		current_digit = 0;
	}
	goto st67;
st67:
	if ( ++p == pe )
		goto _out67;
case 67:
#line 1159 "../ext/nmea.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr88;
	goto st0;
tr88:
#line 20 "nmea.rl"
	{
		current_float += ((*p) - '0')*1.0 / current_frac;
		current_frac *= 10;
	}
	goto st68;
st68:
	if ( ++p == pe )
		goto _out68;
case 68:
#line 1174 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto st69;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr88;
	goto st0;
st69:
	if ( ++p == pe )
		goto _out69;
case 69:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr90;
	} else if ( (*p) >= 65 )
		goto tr90;
	goto st0;
tr90:
#line 5 "nmea.rl"
	{altitude_units = (*p);}
	goto st70;
st70:
	if ( ++p == pe )
		goto _out70;
case 70:
#line 1198 "../ext/nmea.cpp"
	if ( (*p) == 44 )
		goto tr91;
	goto st0;
